fix alignment on mobile screen of About section

--- a/packages/ui/src/components/about/About.module.css
+++ b/packages/ui/src/components/about/About.module.css
@@ -66,7 +66,12 @@
 @media (max-width: 768px) {
   .container {
     padding-left: 0px;
-    max-width: 1200px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .title {
+    font-size: 36px;
+    max-width: max-content;
   }
   .logoGrid {
     grid-template-columns: repeat(4, 1fr);
